--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_highlighting.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_highlighting.htm
@@ -44,13 +44,14 @@ redisplayed is known as computing <b>damage</b>.&nbsp; When syntax coloring is
 involved, the amount of damage caused by an editing operation becomes more
 extensive, since the presence or absence of a single character could change the
 coloring of the text around it.&nbsp;&nbsp;</p>
-<p><font size="2">D</font><font size="2">amagers (</font><b><a href="../reference/api/org/eclipse/jface/text/IPresentationDamager.html">IPresentationDamager</a></b><font size="2">)</font><font size="2">
-determine the region of a document's presentation which must be rebuilt because of a document change. A presentation damager is assumed to
-be specific to a particular document content type (or region). It must be able
-to return a damage region that is valid input for a presentation repairer (</font><b><a href="../reference/api/org/eclipse/jface/text/IPresentationRepairer.html">IPresentationRepairer</a></b>)<font size="2">.&nbsp;
-</font><font size="2">A repairer must be able to </font><font size="2">derive all
-of the information it needs from a damager in order to successfully describe the
-<b>repairs</b> that are needed for a particular content type.</font></p>
+<p><font size="2">D</font><font size="2">amagers (</font><b><a href="../reference/api/org/eclipse/jface/text/IPresentationDamager.html">IPresentationDamager</a></b><font size="2">)</font><font size="2"> 
+  determine the region of a document's presentation which must be rebuilt because 
+  of a document change. A presentation damager is assumed to be specific to a 
+  particular document content type (or region). It must be able to return a damage 
+  region that is valid input for a presentation repairer (</font><b><a href="../reference/api/org/eclipse/jface/text/IPresentationRepairer.html">IPresentationRepairer</a></b>)<font size="2">.&nbsp; 
+  A repairer must be able to </font><font size="2">derive all of the information 
+  it needs from a damage region in order to successfully describe the <b>repairs</b> 
+  that are needed for a particular content type.</font></p>
 <p><font size="2"><b>Reconciling</b> describes the overall process of
 maintaining the presentation of a document as changes are made in the
 editor.&nbsp; A presentation reconciler (</font><b><a href="../reference/api/org/eclipse/jface/text/IPresentationRepairer.html">IPresentationRe</a></b><b><a href="../reference/api/org/eclipse/jface/text/IPresentationReconciler.html">conciler</a></b><font size="2">)
@@ -123,7 +124,7 @@ The dynamic protocol may be useful when different presentation reconcilers are
 attached to a viewer throughout the life of an editor.</p>
 <p>&nbsp;
 
-<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." width="324" height="14"></a></p>
 
 </BODY>
 </HTML>
