--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_utilities.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_utilities.htm
@@ -37,12 +37,12 @@ plug-in.&nbsp;&nbsp;</p>
 
 The editors plug-in preferences can be manipulated in the <b>Workbench &gt;
 Editors</b> and <b>Workbench &gt; Editors &gt; Text Editor</b> preference pages.
-<p>If you do not want to use the standard workbench text preferences for your
-editor, you can set a different preference store for your plug-in class.&nbsp;
-This is typically done by overriding <b>initializeEditor</b> and setting your
-own preference store.&nbsp; If you do use your own preference store, you will
-also need to override the method <b>handlePreferenceStoreChanged()</b> which is
-triggered whenever a preference is updated.</p>
+<p>If you do not want to use the standard workbench text preferences for your 
+  editor, you can set a different preference store.&nbsp; This is typically done 
+  by overriding <b>initializeEditor</b> and setting your own preference store.&nbsp; 
+  If you do use your own preference store, you will also need to override the 
+  method <b>handlePreferenceStoreChanged()</b> which is triggered whenever a preference 
+  is updated.</p>
 <h3>Key bindings</h3>
 <p><a href="wrkAdv_keyBindings_accelScope.htm">Key binding scopes</a> are useful
 for establishing a lookup order for key bindings.&nbsp; Having contextual scopes
@@ -51,11 +51,11 @@ sequences.&nbsp; By default, the workbench operates
 in a global scope.&nbsp; When a text editor becomes active, it is responsible
 for resetting the scope to the text editor scope, so that editor specific key
 bindings will be active.</p>
-<p>In the text framework, each text editor instance has an associated key
-binding scope.&nbsp; It is responsible for setting this scope when it becomes
-active.&nbsp; <a href="../reference/api/org/eclipse/ui/texteditor/TextEditor.html"><b>TextEditor</b></a>
-defines this scope and takes care of making it active.&nbsp; The scope is
-assigned in a method that is called from the constructor:</p>
+<p>In the platform text framework, each text editor instance has an associated 
+  key binding scope.&nbsp; It is responsible for setting this scope when it becomes 
+  active.&nbsp; <a href="../reference/api/org/eclipse/ui/texteditor/TextEditor.html"><b>TextEditor</b></a> 
+  defines this scope and takes care of making it active.&nbsp; The scope is assigned 
+  in a method that is called from the constructor:</p>
 
 <pre><font color="#4444CC">protected void initializeKeyBindingScopes() {
 		setKeyBindingScopes(new String[] { &quot;org.eclipse.ui.textEditorScope&quot; });  
@@ -78,7 +78,7 @@ scope.</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/scope&gt;
 &nbsp;&nbsp; &lt;/extension&gt;</font> </pre>
 
-<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." width="324" height="14"></a></p>
 
 </BODY>
 </HTML>
