--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
@@ -57,12 +57,10 @@ outline.&nbsp; This representation is suitable for many structured outliners, in
 <b>JavaContentOutlinePage</b>.</P>
 
 
-<P >Let's take a look at the highlights of the page implementation.</P>
-
-
-<P >When the outline page is created by the editor in the snippet above, its
-input element is set to the editor's input element.&nbsp; This input can often be passed directly
-to the outline page's viewer, as is done below.</P>
+<P >Let's take a look at the implementation of the page. When the outline page 
+  is created by the editor in the snippet above, its input element is set to the 
+  editor's input element.&nbsp; This input can often be passed directly to the 
+  outline page's viewer, as is done below.</P>
 
 
 <font color='#4444CC'><pre>
@@ -80,12 +78,10 @@ public void createControl(Composite parent) {
 }</pre></font>
 
 
-<P >The tree viewer creation is inherited from <b><a href="../reference/api/org/eclipse/ui/views/contentoutline/ContentOutlinePage.html">ContentOutlinePage</a></b>.&nbsp;
-The standard content and label providers are used. </P>
-
-
-<P >Whenver the editor input is set (or changed),&nbsp; <b>JavaContentOutlinePage</b>
-obtains a document for the editor input and parses the text.</P>
+<P >The tree viewer creation is inherited from <b><a href="../reference/api/org/eclipse/ui/views/contentoutline/ContentOutlinePage.html">ContentOutlinePage</a></b>.&nbsp; 
+  The standard content and label providers are used. Whenever the editor input 
+  is set (or changed),&nbsp; <b>JavaContentOutlinePage</b> obtains a document 
+  for the editor input and parses the text.</P>
 
 
 <font color='#4444CC'><pre>public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
@@ -109,12 +105,11 @@ These segments are displayed by name in the outline view.</P>
 <P ><img src="images/javacontentoutline.gif" alt="" border="0" width="220" height="215"></P>
 
 
-<P >When the
-selection changes, the selected segment is retrieved.&nbsp; Its offsets are used
-to set the highlight range in the editor.</P>
+<P ><font color="#000000">When the selection changes, the selected segment is 
+  retrieved.&nbsp; Its offsets are used to set the highlight range in the editor.</font></P>
 
 
-<pre>public void selectionChanged(SelectionChangedEvent event) {
+</font><pre><font color='#4444CC'>public void selectionChanged(SelectionChangedEvent event) {
 
 	super.selectionChanged(event);
 
@@ -132,7 +127,7 @@ to set the highlight range in the editor.</P>
 		}
 	}
 }
-</font></pre><pre><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></pre>
+</font></pre><pre><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." width="324" height="14"></a></pre>
 
 </BODY>
 </HTML>
