--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Browsing.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Browsing.htm
@@ -75,7 +75,7 @@
     <p>
       Functionally, the Java browsing perspective is fully comparable to the Java perspective.
       The context menus for projects, packages, types, etc. and the global menu and tool bar are the same.
-      Therefore activating these functions is analagous to activating them in the Java perspective.
+      Therefore activating these functions is analogous to activating them in the Java perspective.
     </p>
   </body>
 </html>
