--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-junit.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-junit.htm
@@ -32,13 +32,13 @@
       <li>Create a project &quot;JUnitTest&quot;
       <li>Open the project's build path property page
       <li>Switch to the <b> Libraries</b> tab</li>
-      <li>Add the <i> junit.jar</i> contained in org.junit in the plugins
+      <li>Add the <i> junit.jar</i> contained in org.junit in the plug-ins
         directory as an external JAR to your
         project.</li>
     </ol>
     Optionally, if you want to browse the JUnit source, then attach the <i>junitsrc.zip</i>
     to the <i> junit.jar</i>. The source zip is located in the org.eclipse.jdt.source
-    plugin in src/org.junit_3.8.1.
+    plug-in in src/org.junit_3.8.1.
     <p>
       Now that the JUnitTest project has access to the JUnit classes you can write your
       first test. You implement the test in a subclass of <strong>TestCase</strong>. You can
@@ -77,7 +77,7 @@
       Running Tests
     </h2>
     
-    <p>To run TestFailure, activate the <b>Run</b> dropdown
+    <p>To run TestFailure, activate the <b>Run</b> drop-down
     menu in the toolbar and select <span class="control">Run as &gt; JUnit Test</span>.
     You can inspect the test results in the <i>JUnit</i> view. This view shows
     you the test run progress and status:</p>
