--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
@@ -57,7 +57,7 @@
         Now select the type <em>VectorTest</em> in the Outline view, and from its context menu, select
         <strong>Restore from Local History...</strong>. Select and check the method <em>testCapacity()</em>
         in the Available Java Elements pane. As before, the Local History pane shows the versions saved 
-        in the local histroy. The Java Source Compare pane shows the details of the differences between the 
+        in the local history. The Java Source Compare pane shows the details of the differences between the 
         selected history version and the existing workbench resource.
 		<p>
 		<img src="../images/qs-15a.gif" width=497 height=398 alt="Restore from local history">
