--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
@@ -61,28 +61,26 @@ The interface of interest is <b><a href="../reference/api/org/eclipse/ui/IViewPa
 <h4 >Setting up your environment</h4>
 <p >If you are starting with a clean environment, you will need to ensure that 
   your code has access to the plug-ins <b><a href="../reference/api/org/eclipse/ui/package-summary.html"> 
-  org.eclipse.ui</a></b> and <b><a href="../reference/api/org/eclipse/ui/package-summary.html"> 
-  org.eclipse.swt</a></b>. Import these plug-ins and any plug-ins they require 
-  into your run-time workbench instance by performing the steps below. If you 
-  already have these plug-ins in your workbench instance, proceed to the section 
-  &quot;Creating your plug-in project&quot;.</p>
+  org.eclipse.ui</a></b>. Import this plug-in and any plug-ins it requires into 
+  your run-time workbench instance by performing the steps below. If you already 
+  have these plug-ins in your workbench instance, proceed to the section &quot;Creating 
+  your plug-in project&quot;.</p>
 <ol>
   <li>From the resource perspective, use <strong>File &gt; Import... &gt; External 
     Plug-ins and Fragments</strong>.</li>
   <li>Continue clicking on the <strong>Next &gt;</strong> buttons until you get 
     to the screen called <strong>Selection</strong>. This screen will contain 
     a list of all of the plug-ins in your host workbench instance.</li>
-  <li>Select org.eclipse.swt and org.eclipse.ui and then click the button <strong>Add 
-    Required Plug-ins</strong>.</li>
+  <li>Select org.eclipse.ui and then click the button <strong>Add Required Plug-ins</strong>.</li>
   <li>Click on the <strong>Finish</strong> button. Your Navigator view should 
-    contain org.eclipse.swt, org.eclipse.ui and all of the plug-ins they require.</li>
+    contain org.eclipse.ui and all of the plug-ins it requires (including org.eclipse.swt).</li>
 </ol>
 <p>For a complete discussion of setting up host and run-time workbench instances 
   consult the PDE Guide.</p>
 <h4>Creating your plug-in project</h4>
 <ol>
   <li>You will need to create a project to do your work.&nbsp; The simplest way 
-    is to open the <b>New Project...</b> wizard (File &gt; New &gt; Project...) 
+    is to open the <b>New Project...</b> wizard (<strong>File &gt; New &gt; Project...</strong>) 
     and choose <b>Plug-in Project </b>from the <b>Plug-in Development</b> category.&nbsp; 
     This will set up your project for writing Java code and give you a default 
     plug-in manifest file (explained in a moment.)&nbsp; Use <b>org.eclipse.examples.helloworld</b> 
