*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -13,7 +13,7 @@
       Getting started
     </h1>
     <p>
-      This tutorial is designed to get you started on using the Java Development Toolkit (JDT) in the workbench.
+      This tutorial is designed to get you started on using the Java development toolkit (JDT) in the workbench.
     </p>
     <h1>
       Preparing the workbench
