*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -29,19 +29,18 @@
       <li>
         On the <strong>Libraries</strong> tab, click <strong>Add Variable</strong> for adding a variable that refers to a JAR file.<br>
          The <strong>New Variable Classpath Entry</strong> dialog appears which shows all available classpath variables.
-         You can <strong>Edit...</strong> a variable or create a new variable from the <strong>Edit...</strong> dialog.<br>
          <p><img src="../images/classpathVar.gif" width=389 height=462 alt="Classpath variable dialog"></p>
       </li>
       <li>
-        Press <strong>New...</strong>
+        Press <strong>Edit...</strong> to add a new classpath variable or edit an existing one.
       </li>
       <li>
-        Enter the variable's name and path then press <strong>OK</strong>.
+        Select a classpath variable then press <strong>OK</strong>.
       </li>
       <li>
         If the variable resolves to a folder, you have to specify a path extension that points to a JAR.
         To do this press the <strong>Extend...</strong> button. If the
-        variable already resolves to a JAR file you can click&nbsp;<strong>OK</strong> directly.
+        variable already resolves to a JAR file you can click <strong>OK</strong> directly.
       </li>
     </ol>
     <p>
