--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -13,11 +13,12 @@
     <h1>
       Using Quick Fix
     </h1>
-    To use the quick fix feature: 
-    <ul>
-      <li>
-        You need to have the <strong>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem Indication &gt; Show problems before compiling</strong> checkbox selected.
-      </li>
+    To use the Quick Fix feature: 
+<ul>
+      
+  <li> You need to have the <strong>Window &gt; Preference &gt; Java &gt; Editor 
+    &gt; Annotations &gt; Analyze annotations while typing</strong> checkbox selected. 
+  </li>
       <li>
         In the Java editor, if you see an error underlined with a squiggly line, position the caret inside the underlined range and do one of the following 
         <ul>
@@ -36,10 +37,12 @@
         Select an entry form the list and press <kbd>Enter</kbd>.
       </li>
     </ul>
-    If you have the <strong>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem Indication &gt; Indicate problems solvable with Quick Fix in vertical ruler</strong> checkbox
-    selected, then light bulb icons appear on the left-hand side vertical ruler to indicate Quick Fix'able problems. You can then click on one of the the light bulb icons to
-    invoke Quick Fix. 
-    <p>
+    If you have the <strong>Window &gt; Preference &gt; Java &gt; Editor &gt; 
+Problem Indication &gt; Indicate annotations solvable with Quick Fix in vertical 
+ruler</strong> checkbox selected, then light bulb icons appear on the left-hand 
+side vertical ruler to indicate Quick Fix'able problems. You can then click on 
+one of the the light bulb icons to invoke Quick Fix. 
+<p>
       <strong>Note:</strong> Occasionally, invoking Quick Fix will not suggest any corrections. A message saying '<strong>No suggestions available</strong>' will be
       displayed in such cases.
     </p>
