--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -38,7 +38,7 @@
       </li>
     </ul>
     If you have the <strong>Window &gt; Preference &gt; Java &gt; Editor &gt; 
-Problem Indication &gt; Indicate annotations solvable with Quick Fix in vertical 
+Annotations &gt; Indicate annotations solvable with Quick Fix in vertical 
 ruler</strong> checkbox selected, then light bulb icons appear on the left-hand 
 side vertical ruler to indicate Quick Fix'able problems. You can then click on 
 one of the the light bulb icons to invoke Quick Fix. 
