*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
@@ -44,7 +44,7 @@
     <p>More specific instructions for setting up a launch configuration for
     remote debugging should be obtained from your VM provider.&nbsp; </p>
     <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-    <a href="../tasks/tasks-141.htm">Connecting to a remote VM<br>
+    <a href="../tasks/tasks-141.htm">Using the remote Java application launch configuration<br>
     </a>
     <a href="../tasks/tasks-142.htm">Disconnecting from a VM</a><br>
     </p>
