--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
@@ -37,8 +37,8 @@
         (without using the button pull-down menu).
       </li>
       
-  <li> Select <strong>Run</strong> &gt; <strong>Run Last Launched (<kbd>Ctrl+F11</kbd>)</strong>, 
-    or <strong>Run</strong> &gt; <strong>Debug Last Launched (<kbd>F11</kbd>)</strong>
+  <li> Select <strong>Run</strong> &gt; <strong>Run Last Launched</strong> (<kbd>Ctrl+F11</kbd>), 
+    or <strong>Run</strong> &gt; <strong>Debug Last Launched</strong> (<kbd>F11</kbd>)
     from the workbench menu bar. 
   </li>
     </ul>
