--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
@@ -54,7 +54,22 @@
     Java editor context menu, or press the <kbd>Ctrl-F5</kbd> key. Execution resumes 
     until the selected method is invoked. </li>
 </ol>
-<h2>Run to return </h2>
+    <h2>
+      Step with filters
+    </h2>
+    <ol>
+      <li>
+        Select a stack frame in the Debug view. The current line of execution in the selected frame is highlighted in the editor in the Debug perspective.
+      </li>
+      <li>
+        Click the <strong>Step with Filters</strong> button in the Debug view toolbar, or use <kbd>Shift+F5</kbd>. The next expression on the currently-selected
+        line to be executed is invoked, and execution suspends at the next executable line in the next executed method which is not filtered out
+        (see <strong>Window &gt; Preferences &gt; Java &gt; Debug &gt; Step Filtering</strong>).
+      </li>
+    </ol>
+    <h2>
+      Run to return
+    </h2>
     <ol>
       <li>
         Select a stack frame in the Debug view. The current line of execution in the selected frame is highlighted in the editor in the Debug perspective.
