--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -39,7 +39,7 @@
         </ul>
       </li>
       <li>
-        Select the expression to be evaluated and select <strong>Display</strong> or <strong>Inspect</strong> from the context pop-up menu. The
+        Select the expression to be evaluated and select <strong>Display</strong>, <strong>Inspect</strong> or <strong>Execute</strong> from the context pop-up menu. The
         result of evaluating the expression is shown in the Display view (if <strong>Display</strong> was chosen), or in the Expressions view (if <strong>Inspect</strong> was
         chosen).
       </li>
