--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <title>
-      Connecting to a remote VM with the Remote Java application launch configuration
+      Using the remote Java application launch configuration
     </title>
   </head>
   <body>
