--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
@@ -53,7 +53,7 @@
     </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-      <a href="../tasks/tasks-152.htm">Running an expression</a><br>
+      <a href="../tasks/tasks-152.htm">Executing an expression</a><br>
        <a href="../tasks/tasks-150.htm">Inspecting the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a>
     </p>
