--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
@@ -5,22 +5,22 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <title>
-      Running an expression
+      Executing an expression
     </title>
   </head>
   <body>
     <h1>
-      Running an expression
+      Executing an expression
     </h1>
     <p>
-      Running an expression evaluates an expression but does not display a result.
+      Executing an expression evaluates an expression but does not display a result.
     </p>
     <p>
-      If you select the expression to run and click the <strong>Run</strong> button in the toolbar, no result is
-      displayed, but the code is run.&nbsp;&nbsp;
+      If you select the expression to execute and click the <strong>Execute</strong> button in the toolbar, no result is
+      displayed, but the code is executed.&nbsp;&nbsp;
     </p>
     <p>
-      For example, if you type and highlight <code>System.out.println(&quot;Hello World&quot;)</code>, and click the <strong>Run</strong> button, <em>Hello World</em>
+      For example, if you type and highlight <code>System.out.println(&quot;Hello World&quot;)</code>, and click the <strong>Execute</strong> button, <em>Hello World</em>
       appears in the Console view, but no result is displayed in the scrapbook editor or the Expressions view.
     </p>
     <p>
