--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -25,7 +25,7 @@
         <strong>Run &gt; Run As &gt; Java Application </strong>in the workbench
         menu bar.&nbsp;<br>
         or Select
-        <strong>Run As &gt; Java Application </strong>in the <strong>Run</strong> button pull-down.&nbsp;
+        <strong>Run As &gt; Java Application </strong>in the drop-down menu on the <strong>Run</strong> tool bar button.&nbsp;
       </li>
       <li>
         Your program is now launched, and text output is shown in the Console.
