--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
@@ -39,7 +39,7 @@
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
        <a href="../tasks/tasks-151.htm">Displaying the result of evaluating an expression</a><br>
-       <a href="../tasks/tasks-152.htm">Running an expression</a><br>
+       <a href="../tasks/tasks-152.htm">Executing an expression</a><br>
        <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a>
     </p>
     <p>
