--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-156.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-156.htm
@@ -35,7 +35,7 @@
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-151.htm">Displaying the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-150.htm">Inspecting the result of evaluating an expression</a><br>
-       <a href="../tasks/tasks-152.htm">Running an expression</a>
+       <a href="../tasks/tasks-152.htm">Executing an expression</a>
     </p>
     <p>
 	<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" width="324" height=
