--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
@@ -26,7 +26,7 @@
       <li>
         Select <strong>Run &gt; Debug As &gt; Java Application</strong>.&nbsp;<br>
         or Select
-        <strong>Debug As &gt; Java Application </strong>in the <strong>Debug</strong> button pull-down.&nbsp;
+        <strong>Debug As &gt; Java Application </strong>in the drop-down menu on the <strong>Debug</strong> tool bar button.&nbsp;
       </li>
       <li>
         Your program is now launched and the launched process appears in the Debug view.&nbsp;
